# bwise

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
HomebrewFormula/: bwise.rb
contrib/: com.example.bwise-menubar.plist
src/bwise/: __init__.py  agents.py  cli.py  client.py  doctor.py  env.py  menubar.py  pinentry.py  serve.py  sleepguard.py
tests/: test_agents.py  test_cli.py  test_client.py  test_doctor.py  test_env.py  test_init.py  test_menubar.py  test_pinentry.py  test_serve.py  test_sleepguard.py
